respect the data shape of the response
